--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Project 3/.idea/workspace.xml
 *.xml
 Project 3/.idea/workspace.xml
 Project 3/.idea/workspace.xml
+Project 3/.idea/workspace.xml
+Project 3/.idea/Project 3.iml
+Project 3/.idea/misc.xml
